--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Interactive Transformation</h1>
+    <p class="instruction-tagline">Drag and drop the green arrows so that the blue point falls on the red</p>
     <div class="game-info">
         <span>Moves: <span id="moveCounter">0</span></span>
         <span id="timer">Timer: 0 seconds</span>
