--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <ol>
                     <li>Your goal is to drag and drop the green basis vectors (i' and j') to apply a transformation on the grid that maps blue on to red</li>
                     <li>It may be a rotation, reflection, or scaling, or all three </li>
-                    <li>i' corresponds to the x component of blue,  j' to the y component of blue, and together they form a transformation matrix </li>
-                    <li>Click "Go" to see how the current orientation transforms blue</li>
-                    <li>Click solve to see which apply the correct transormation (solution not unique)</li>
-                    <li>Try to make light blue (image) land on the red point</li>
+                    <li>i' acts on the x component of blue and j' acts on the y component of blue, together they form a 2x2 matrix </li>
+                    <li>Click "Go" to see how the current orientation transforms the space</li>
+                    <li>Click solve to see the correct transormation (solution not unique)</li>
+                    <li>Try to make the light blue (image) vector land on the red point</li>
                 </ol>
                 <div class="gif-container">
                     <img src="tutorial.gif" alt="How to play demonstration" class="tutorial-gif">
