--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <h2>How to Play</h2>
             <p><strong>Controls:</strong></p>
             <ul>
-                <li>Use Arrow Keys to move the Blue Point</li>
-                <li>WASD Keys for Red Point (Two-Player Mode only)</li>
+                <li>Blue Point (Player 1): Arrow Keys</li>
+                <li>Red Point (Player 2): WASD Keys (Two-Player Mode)</li>
             </ul>
             <p><strong>Game Modes:</strong></p>
             <ul>
-                <li>Offense Mode: You (Blue) try to catch Red. Red moves first and tries to escape!</li>
-                <li>Defense Mode: You (Blue) try to escape! Red moves first and tries to catch you!</li>
+                <li>Offense Mode: Try to catch the red point! Red moves first and tries to escape.</li>
+                <li>Defense Mode: Try to escape from the red point! You move first, then red chases.</li>
                 <li>Two-Player Mode: Red uses WASD, Blue uses Arrows</li>
             </ul>
             <p><strong>Rules:</strong></p>
@@ -36,6 +36,7 @@
                 <li>After each move, a random path disappears</li>
                 <li>Game ends when points connect or become separated</li>
             </ul>
+            <p><strong>Strategy Tip:</strong> Plan your moves carefully! The disappearing edges can either help or hinder your progress.</p>
             <button onclick="closeInstructions()" class="game-button">Close</button>
         </div>
     </div>
