--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Catch the Point</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Point Chase Game</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <style></style>
 </head>
 <body>
-    <div class="container">
+    <div id="gameContainer" class="container">
         <div class="left-section">
             <h1>Catch the Point</h1>
             <div id="gameTitle" class="game-title"></div>
@@ -68,6 +70,12 @@
         </div>
     </div>
 
+    <div class="rotation-overlay">
+        <div class="phone-icon">📱</div>
+        <h1>Please Rotate Your Phone</h1>
+        <p>This game works best in landscape mode</p>
+    </div>
+
     <script src="game.js"></script>
 </body>
-</html>
+</html> 
